--- a/app_admin/src/app/edit-trip/edit-trip.component.html
+++ b/app_admin/src/app/edit-trip/edit-trip.component.html
@@ -57,13 +57,13 @@
       </div>
     </div>
     <div class="form-group">
-      <label>PerPerson:</label>
-      <input type="text" formControlName="perperson"
-      placeholder="PerPerson" class="form-control"
-      [ngClass]="{ 'is-invalid': submitted && f.perperson.errors }">
-      <div *ngIf="submitted && f.perperson.errors">
-        <div *ngIf="f.perperson.errors.required">
-          PerPerson is required
+      <label>Per Person:</label>
+      <input type="text" formControlName="perPerson"
+      placeholder="Per Person" class="form-control"
+      [ngClass]="{ 'is-invalid': submitted && f.perPerson.errors }">
+      <div *ngIf="submitted && f.perPerson.errors">
+        <div *ngIf="f.perPerson.errors.required">
+          Per Person is required
         </div>
       </div>
     </div>
