--- a/app_admin/src/app/app.component.html
+++ b/app_admin/src/app/app.component.html
@@ -1,9 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">{{ title }}</a>
-  </div>
-</nav>
+<app-navbar></app-navbar>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
