--- a/app_admin/src/app/trip-listing/trip-listing.component.html
+++ b/app_admin/src/app/trip-listing/trip-listing.component.html
@@ -1,6 +1,6 @@
 
 <!-- <h1>{{ title }}</h1> -->
-<div>
+<div *ngIf="isLoggedIn()">
   <button (click)="addTrip()" class="btn btn-info">Add Trip</button>
 </div>
 <div class="row">
